--- a/aulas/frontend/src/global.css
+++ b/aulas/frontend/src/global.css
@@ -61,8 +61,9 @@ form textarea {
     filter: brightness(90%)
 }
 
-.back-link{
+.back-link {
     display: flex;
+    margin-top: 40px;
     align-items: center;
     color: #41414d;
     font-size: 18px;
@@ -77,4 +78,8 @@ form textarea {
 
 .back-link:hover {
     opacity: 0.8;
+}
+
+.cmargin {
+    margin-top: 0px;
 }
